# usv-digital-twin

./: Cargo.toml  LICENSE  README.md
assets/shaders/: ocean_shader.wgsl  usv_camouflage.wgsl
src/: biomimicry.rs  bridge.rs  constants.rs  environment.rs  main.rs  models.rs  optics.rs  scene.rs  telemetry.rs  ui.rs  vehicle.rs
src/optics/: core.rs  mod.rs  render.rs
